# gazelle_bug

./: MODULE.bazel  go.mod  go.sum
example/: BUILD.bazel  example.go
